tests/typechecker/pass/014-sqrt.hyg
(sqrt(3.14f)): float