tests/typechecker/fail/014-sqrt.hyg
(sqrt(3.14f)): int;
(sqrt(3)): int